--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a title="Gif Download" download="AgharKar Jewellers Visiting Card Gif" href="http://yagharkar.github.io/AgharKarJewellers/AgharKar%20Jewellers%20Visiting%20Card%20Gif.gif"> Download AgharKar Jewellers Visiting Card in Image </a>
     
     <br><center>
-    <a title="Vcf Download" download href="http://yagharkar.github.io/BlackAquaIndia.github.io/AgharKar%20Jewellers%20Visiting%20Card%20Vcf.vcf"> Download AgharKar Jewellers Visiting Card in VCard </a>
+    <a title="Vcf Download" download href="http://yagharkar.github.io/AgharKarJewellers/AgharKar%20Jewellers%20Visiting%20Card%20Vcf.vcf"> Download AgharKar Jewellers Visiting Card in VCard </a>
     
     <br><br><center>
       <font size="2">
