--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Black Aqua India</title>
+    <title>Agharkar Jewellers, Nashik</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
   <body>
